fixed content alignment on sold products

--- a/app/assets/stylesheets/components/_product_show.scss
+++ b/app/assets/stylesheets/components/_product_show.scss
@@ -66,5 +66,5 @@
   width: 100%;
   display: flex;
   flex-direction: row;
-  align-items: center;
+  justify-content: center;
 }
